--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   🔲 Responsive Design
  -->
 <body>
-  <h1 class="text-center font-bold text-2xl m-8 text-purple-500 uppercase">Welcome to the best product ever</h1>
+  <h1 class="text-center font-bold text-2xl m-8 text-purple-500 uppercase">Welcome to the best product ever ever ever!!!</h1>
 
   <div class="px-16 md:flex bg-gray-100">
     <div class="md:p-16 md:w-1/2">
